unpackaged/main/default/objects/loan__Fee__c/loan__Fee__c.object-meta.xml
<CustomObject>
    <description>Fee</description>
    <label>Fee</label>
    <nameField>
        <label>Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>