unpackaged/main/default/objects/loan__Fee__c/fields/loan__Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Amount__c</fullName>
    <description>Number or %
Amount, is a flat amount. For other fee calculation methods, this is a % amount.</description>
    <inlineHelpText>Number or % 
Amount, is a flat amount. For other fee calculation methods, this is a % amount.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>