unpackaged/main/default/objects/loan__Fee__c/fields/loan__Currency__c.field-meta.xml
<CustomField>
    <fullName>loan__Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Currency</description>
    <inlineHelpText>Currency</inlineHelpText>
    <label>Currency</label>
    <referenceTo>loan__Currency__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>