unpackaged/main/default/objects/loan__Fee__c/fields/loan__Custom_Fee_Application_Class__c.field-meta.xml
<CustomField>
    <fullName>loan__Custom_Fee_Application_Class__c</fullName>
    <inlineHelpText>Here, you can provide the name of the class which implements the IFeeBehaviour interface, to provide the condition for applying a fee</inlineHelpText>
    <label>Custom Fee Application Condition Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>