unpackaged/main/default/objects/loan__Fee__c/fields/loan__Fee_Unearned_Income_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Fee_Unearned_Income_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This account will be used if we want to recognize the income from the fee over the life of the loan.</inlineHelpText>
    <label>Fee Unearned Income Account</label>
    <referenceTo>loan__MF_Account__c</referenceTo>
    <relationshipLabel>Fees (Unearned Income Account)</relationshipLabel>
    <relationshipName>Fees1</relationshipName>
    <type>Lookup</type>
</CustomField>