unpackaged/main/default/objects/loan__Fee__c/fields/loan__Time_of_charge__c.field-meta.xml
<CustomField>
    <fullName>loan__Time_of_charge__c</fullName>
    <description>Time of charge</description>
    <inlineHelpText>Time of charge</inlineHelpText>
    <label>Time of charge</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Fee_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Late Fees</fullName>
            </value>
            <value>
                <fullName>Maintenance Fees</fullName>
            </value>
            <value>
                <fullName>Pay-Off Fees</fullName>
            </value>
            <value>
                <fullName>NSF Fees</fullName>
            </value>
            <value>
                <fullName>Wire Fees</fullName>
            </value>
            <value>
                <fullName>Periodic Fees</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Amortized Fees</fullName>
            </value>
            <value>
                <fullName>Time of Disbursement</fullName>
            </value>
            <value>
                <fullName>Pre-Paid Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>