unpackaged/main/default/objects/loan__Fee__c/validationRules/loan__Investor_Share_Percentage_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Investor_Share_Percentage_Limit</fullName>
    <active>true</active>
    <description>Investor Share Percentage can only be between 0 to 100 %. And not beyond 100 %.</description>
    <errorConditionFormula>OR(
   loan__Investor_Share__c &gt; 100.0,
   loan__Investor_Share__c &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>loan__Investor_Share__c</errorDisplayField>
    <errorMessage>Investor Share Percentage can only be between 0 to 100 %.</errorMessage>
</ValidationRule>